# tg-downloader

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  config.yaml.example  db.py  docker-compose.yml  downloader.py  lang_filter.py  listener.py  main.py  pyproject.toml  scraper.py  tgdctl.py  ui.py  utils.py
.claude/: settings.json
.claude-flow/: CAPABILITIES.md
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
docs/superpowers/plans/: 2026-05-25-fts5-search-claude-api.md  2026-05-25-rag-implementation.md  2026-05-26-search-results-ux.md
docs/superpowers/specs/: 2026-05-25-fts5-search-claude-api-design.md  2026-05-25-rag-design.md  2026-05-26-search-results-ux-design.md  2026-06-30-pdf-reader-design.md
rag/: chunker.py  generator.py  indexer.py  retriever.py
search/: chunker.py  generator.py  indexer.py
tests/: test_chunker.py  test_config.py  test_db_rag.py  test_db_reconcile.py  test_lang_filter.py  test_search_chunker.py  test_search_db.py  test_webui_pdf.py
webui/: Dockerfile  app.py  pyproject.toml
webui/static/: index.html  reader.css  reader.js
