[project]
name = "tg-downloader"
version = "0.1.0"
description = "Scrape Telegram channels for media files and interactively select which ones to download"
requires-python = ">=3.11"
dependencies = [
    "inquirerpy>=0.3.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "telethon>=1.43.2",
]

[project.scripts]
tg-downloader = "main:main"
