[project]
name = "tg-downloader"
version = "0.1.0"
description = "Scrape Telegram channels for media files and interactively select which ones to download"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pillow>=10.0",
    "inquirerpy>=0.3.4",
    "langdetect>=1.0.9",
    "pymupdf>=1.25",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sentence-transformers>=3.0",
    "telethon>=1.43.2",
    "uvicorn>=0.29",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
tg-downloader = "main:main"
tgdctl = "tgdctl:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "config", "db", "lang_filter", "listener", "ui", "downloader", "utils", "tgdctl"]
packages = ["rag"]
